842
remember to look at both, type and definition annotations. currently, both break.

{code}
    @a({val y = 1; y}) val x = 1
    java.lang.VerifyError: (class: RequestResult$$, method: <init> signature: ()V) Expecting to find integer on stack
        at RequestResult$$result(<console>)
        at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
        at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
        a...
    
    
    val x: Int @a({val y = 1; y}) = 1
    <console>:5: error: not found: value y
       val x: Int @a({val y = 1; y}) = 1
                                 ^

{code}
